<resources>
    <string name="app_name">MarvelGallery</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_nonetwork">No Network</string>
    <string name="selected_comic">Comic Details</string>
    <string name="other_details">Other Details</string>
    <string name="comic_title">Title:</string>
    <string name="comic_description">Description:</string>
    <string name="page_cnt">Page Count:</string>
    <string name="comic_price">Comic Price:</string>
    <string name="comic_authors">Authors:</string>
    <string name="search_comics_within_budget">Give your budget,..</string>
    <string name="no_values">No Budget was given. Full comics list will come up now.</string>
</resources>
